--- a/PIMS_Prototype/styles/ViewStyles.scss
+++ b/PIMS_Prototype/styles/ViewStyles.scss
@@ -166,7 +166,15 @@ $pageWidth:1000px;
     }
 
     .isRequired {
-        
+        background: white;
+    }
+
+    .isDateTimePicker {
+        background: white;
+    }
+
+    .isDatePicker {
+        background: white;
     }
 }
 
