get up to contact details

--- a/PIMS_Prototype/styles/ViewStyles.css
+++ b/PIMS_Prototype/styles/ViewStyles.css
@@ -111,6 +111,8 @@
     background: white; }
   .tableMaintain .isDatePicker {
     background: white; }
+  .tableMaintain .isPhoneNumber {
+    background: white; }
 
 /************************************************************************/
 /*Data Entry
