--- a/PIMS_Prototype/styles/ViewStyles.scss
+++ b/PIMS_Prototype/styles/ViewStyles.scss
@@ -176,6 +176,10 @@ $pageWidth:1000px;
     .isDatePicker {
         background: white;
     }
+
+    .isPhoneNumber {
+        background: white;
+    }
 }
 
 
