--- a/PIMS_Prototype/styles/ViewStyles.css
+++ b/PIMS_Prototype/styles/ViewStyles.css
@@ -81,30 +81,31 @@
 /************************************************************************/
 /*Maintain View
 /************************************************************************/
+/*you need at least 1 property to ensure a class is created*/
+/*by creating a class, you can have the class show up in intellisense*/
 .tableMaintain {
   width: 100%;
   border: none;
   border-collapse: collapse;
   margin: 4px;
-  font-family: Arial, sans-serif; }
+  font-family: Arial, sans-serif;
+  /*classes for formating and validationby. creating a class, you can have the class show up in intellisense*/ }
   .tableMaintain td:first-child {
+    text-align: right;
+    width: 40%; }
+  .tableMaintain td:first-child.SubSection {
+    text-align: left;
     width: 40%;
-    text-align: right; }
+    text-decoration: underline; }
   .tableMaintain td:nth-child(2) {
-    width: 1px;
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-top: 10px;
-    padding-bottom: 10px; }
-  .tableMaintain td:nth-child(3) {
     width: 60%; }
-  .tableMaintain .isEdittable {
-    background: white; }
   .tableMaintain .isSmallField {
     width: 100%; }
   .tableMaintain .isLargeField {
     width: 100%;
     height: 80px; }
+  .tableMaintain .isEdittable {
+    background: white; }
   .tableMaintain .isRequired {
     background: white; }
   .tableMaintain .isDateTimePicker {
@@ -112,6 +113,8 @@
   .tableMaintain .isDatePicker {
     background: white; }
   .tableMaintain .isPhoneNumber {
+    background: white; }
+  .tableMaintain .isAHC {
     background: white; }
 
 /************************************************************************/
