--- a/PIMS_Prototype/styles/ViewStyles.css
+++ b/PIMS_Prototype/styles/ViewStyles.css
@@ -56,6 +56,15 @@
     border-style: solid;
     width: 75%;
     margin-top: 20px; }
+  .viewContainer .fieldsetDashboard {
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    border-color: silver;
+    border-style: solid;
+    width: 75%;
+    margin-top: 20px; }
 
 /************************************************************************/
 /*Master Table
@@ -83,6 +92,22 @@
 /************************************************************************/
 /*you need at least 1 property to ensure a class is created*/
 /*by creating a class, you can have the class show up in intellisense*/
+.tableDashboard {
+  width: 100%;
+  border: none;
+  border-collapse: collapse;
+  margin: 4px;
+  font-family: Arial, sans-serif; }
+  .tableDashboard td:first-child {
+    width: 50%;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+    padding-bottom: 5px; }
+  .tableDashboard td:nth-child(2) {
+    width: 50%;
+    padding: 0px; }
+
 .tableMaintain {
   width: 100%;
   border: none;
